--- a/web/index.html
+++ b/web/index.html
@@ -31,24 +31,26 @@
 
   <title>Chronicle</title>
   <link rel="manifest" href="manifest.json">
+
   <script>
-    var serviceWorkerVersion = null;
+    // The value below is injected by flutter build, do not touch.
+    const serviceWorkerVersion = null;
   </script>
+  <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
 <body>
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
-      _flutter.loader.loadEntrypoint({
+      _flutter.loader.load({
         serviceWorker: {
           serviceWorkerVersion: serviceWorkerVersion,
-        },
-        onEntrypointLoaded: function(engineInitializer) {
-          engineInitializer.initializeEngine().then(function(appRunner) {
-            appRunner.runApp();
-          });
         }
+      }).then(function(engineInitializer) {
+        return engineInitializer.initializeEngine();
+      }).then(function(appRunner) {
+        return appRunner.runApp();
       });
     });
   </script>
